Fixed more HTML validation errors, handlebars layout on userError page, and dynamic overflow for draft settings page

--- a/public/css/userhomeStyles.css
+++ b/public/css/userhomeStyles.css
@@ -50,6 +50,7 @@ html, body {
     height:80%;
     background-color: #FFE992;
     overflow-y: scroll;
+    max-height: 28vh;
 }
 
 .draftButtons {
